--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-gmon.out
 producer-event.log
 consumer-event.log
 producer-consumer
-producer-consumer-debug
-src/obj/
-src/obj/debug/
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
