--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,15 +15,15 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 IF("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
-	add_compile_options("-march=native" "-Wall" "-pedantic")
-	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og -pg")
+	add_compile_options("-march=native" "-Wall" "-Wextra" "-pedantic")
+	set(CMAKE_C_FLAGS_RELEASE "-O3")
+	set(CMAKE_C_FLAGS_DEBUG "-Og -pg")
 ELSEIF("${CMAKE_C_COMPILER_ID}" MATCHES "Clang")
-	add_compile_options("-march=native" "-Wall" "-pedantic")
-	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
-ELSEIF(MSVC)
-	add_compile_options("/Wall")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /O2")
-	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /Od /Z7")
+	add_compile_options("-march=native" "-Wall" "-Wextra" "-pedantic")
+	set(CMAKE_C_FLAGS_RELEASE "-O3")
+	set(CMAKE_C_FLAGS_DEBUG "-O0")
+ELSE()
+	message(WARNING "You are using a compiler which might not be compatible with this project!")
 ENDIF("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
 
 add_executable(producer-consumer
