Updated .gitignore and CMakeLists.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
 producer-event.log
 consumer-event.log
-producer-consumer
-CMakeCache.txt
-CMakeFiles/
-cmake_install.cmake
-Makefile
+producer-consumer*
 .kateproject
+gmon.out
